Rainbow Memory-Game.html

--- a/Rainbow Memory-Game.html
+++ b/Rainbow Memory-Game.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>翻</title>
+  <title>彩色卡牌-挑战记忆力-突破自己</title>
   <style>
   body {
     display: flex;
