导航页-模块选择.html

--- a/导航页-模块选择.html
+++ b/导航页-模块选择.html
@@ -174,7 +174,7 @@ em1,em2,em3 {
 	  window.open("https://ve.cool360.com/2023Memory/index.html");
       }
        document.getElementById("inner2").onclick=function(){
-	  window.open("https://ve.cool360.com/2023Memory/index.html");
+	  window.open("file:///Users/zhenghao/Desktop/期末大作业/Rainbow%20Memory-Game.html");
        }
        document.getElementById("inner3").onclick=function(){
 	  window.open("http://www.et.zjut.edu.cn/");
